# trakt-rust

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
mock_data/: certifications_movies.json  checkin.json  checkin_req.json  countries_movies.json  episode.json  episode_comments.json  episode_full.json  episode_ratings.json  episode_stats.json  episode_translations.json  episode_watching.json  episode_watching_full.json  genres_movies.json  id_lookup.json  languages_movies.json  lists.json  media_lists.json  movie.json  movies.json  networks.json  oauth_device_code.json  oauth_device_token_req.json  oauth_get_token.json  oauth_get_token_req.json  oauth_refresh_token_req.json  oauth_revoke_token_req.json  people.json  people_lists.json  people_movie_credits.json  people_show_credits.json  search.json  season.json  seasons.json  shows.json
src/: constants.rs  error.rs  extended_info.rs  filters.rs  lib.rs  macros.rs  pagination.rs  prelude.rs  selectors.rs
src/asyn/: mod.rs  pagination.rs
src/asyn/requests/: authentication.rs  checkin.rs  episodes.rs  lists.rs  people.rs  recommendations.rs  search.rs  seasons.rs  shows.rs  users.rs
src/models/: authentication.rs  calendar.rs  certifications.rs  checkin.rs  collection.rs  comment.rs  country.rs  credits.rs  episode.rs  genre.rs  history.rs  ids.rs  item_type.rs  item_types.rs  language.rs  like.rs  list.rs  localization.rs  mod.rs  movie.rs  network.rs  people.rs  person.rs  progress.rs  rating.rs  search.rs  season.rs  show.rs  stats.rs  sync.rs  user.rs  watched.rs  watching.rs
src/models/comment/: asyn.rs  mod.rs  sync.rs
src/models/episode/: asyn.rs  mod.rs  sync.rs
src/models/sync/: mod.rs  rating_request.rs  sync_request.rs
src/models/user/: asyn.rs  mod.rs  sync.rs
src/requests/: authentication.rs  calendar.rs  checkin.rs  comments.rs  episodes.rs  lists.rs  mod.rs  movies.rs  people.rs  recommendations.rs  search.rs  seasons.rs  shows.rs  sync.rs  users.rs
src/requests/calendar/: calendar_request.rs  mod.rs
src/requests/comments/: comment_create_request.rs  comment_post_request.rs  comments_request.rs  (+1 more)
src/sync/: mod.rs  pagination.rs
(+35 files in other folders)
