[package]
name = "trakt"
version = "0.1.0"
authors = ["Jens Gatzweiler <me@lichthagel.de>"]
edition = "2018"
description = "A api wrapper in Rust for trakt.tv"
repository = "https://github.com/Lichthagel/trakt-rust"
readme = "README.md"
categories = ["api-bindings", "web-programming"]
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
reqwest = "0.9.9"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]