[package]
name = "trakt"
version = "0.0.2"
authors = ["Jens Gatzweiler <me@lichthagel.de>"]
edition = "2018"
description = "An api wrapper in Rust for trakt.tv"
repository = "https://github.com/Lichthagel/trakt-rust"
readme = "README.md"
categories = ["api-bindings", "web-programming"]
license = "MIT"
documentation = "https://docs.rs/trakt"

[badges]
maintenance = { status = "experimental" }

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.futures]
version = "0.1"
optional = true

[dependencies.hashbrown]
version = "0.1"
features = ["serde"]

[dev-dependencies]
mockito = "0.17"
tokio-core = "0.1"

[features]
default = ["sync"]
sync = []
async = ["futures"]

[package.metadata.docs.rs]
all-features = true