[package]
name = "trakt"
version = "0.0.2"
authors = ["Jens Gatzweiler <me@lichthagel.de>"]
edition = "2018"
description = "An api wrapper in Rust for trakt.tv"
repository = "https://github.com/Lichthagel/trakt-rust"
readme = "README.md"
categories = ["api-bindings", "web-programming"]
license = "MIT"
documentation = "https://docs.rs/trakt"

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dev-dependencies]
mockito = "0.22"